samples/_failures_safe/1761350137_60062d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a594735.c: In function ‘main’:
./samples/SAFE/__tmp_8a594735.c:142:5: error: expected declaration or statement at end of input
  142 |     add_edge(&g, 4, 3, 3);
      |     ^~~~~~~~
